premier push TAMBUA 0.3

--- a/employHome.html
+++ b/employHome.html
@@ -314,7 +314,7 @@
 
         .stat-title {
             color: var(--text-light);
-            font-size: 14px;
+            font-size: 20px;
             font-weight: 500;
         }
 
@@ -329,7 +329,7 @@
         }
 
         .stat-value {
-            font-size: 32px;
+            font-size: 25px;
             font-weight: bold;
             color: var(--text-dark);
             margin-bottom: 5px;
@@ -1343,34 +1343,35 @@
             <section id="dashboard" class="page-section active">
                 <!-- Statistics Cards -->
                 <div class="stats-grid">
-                    <div class="stat-card">
-                        <div class="stat-header">
-                            <div class="stat-title">Collègues Département</div>
-                            <div class="stat-icon" style="background: var(--primary-color);">
-                                <i class="fas fa-users"></i>
-                            </div>
-                        </div>
-                        <div class="stat-value">12</div>
-                        <div class="stat-change change-positive">
-                            <i class="fas fa-arrow-up"></i>
-                            <span>IT Department</span>
-                        </div>
-                    </div>
 
                     <div class="stat-card">
                         <div class="stat-header">
-                            <div class="stat-title">Congés Restants</div>
-                            <div class="stat-icon" style="background: var(--success);">
+                            <div class="stat-title">Mes demandes de congé</div>
+                            <div class="stat-icon" style="background: var(--primary-color);">
                                 <i class="fas fa-calendar"></i>
                             </div>
                         </div>
-                        <div class="stat-value">18</div>
-                        <div class="stat-change">
-                            <span>jours disponibles</span>
+                        <div class="stat-value">Vous avez 03 demandes de congés en attentes</div>
+                        <div class="stat-change change-positive">
+                            <!-- <i class="fas fa-arrow-up"></i> -->
+                            <span>Voir mes demandes de congés</span>
                         </div>
                     </div>
 
                     <div class="stat-card">
+                        <div class="stat-header">
+                            <div class="stat-title">Mes bulletins</div>
+                            <div class="stat-icon" style="background: var(--success);">
+                                <i class="fas fa-users"></i>
+                            </div>
+                        </div>
+                        <div class="stat-value">Votre rémunération nette s'est élévé à  ......  en Mai</div>
+                        <div class="stat-change">
+                            <span>Voir le bulletin de paie</span>
+                        </div>
+                    </div>
+
+                    <!-- <div class="stat-card">
                         <div class="stat-header">
                             <div class="stat-title">Demandes en Attente</div>
                             <div class="stat-icon" style="background: var(--accent-color);">
@@ -1396,7 +1397,7 @@
                             <i class="fas fa-arrow-up"></i>
                             <span>Ce mois</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <!-- Content Grid -->
