--- a/employHome.html
+++ b/employHome.html
@@ -195,7 +195,7 @@
                                             <div class="dashboard-leave-item approved" onclick="goToLeavesSection()">
                                                 <div class="expense-info-item">
                                                     <div class="leave-item-header">
-                                                        <div class="expense-info-label">RTT</div>
+                                                        <div class="expense-info-label">Formation</div>
                                                         <span class="status-badge status-approved-badge">Approuvé</span>
                                                     </div>
                                                     <div class="expense-info-value">28 Mai 2025</div>
