--- a/employHome.html
+++ b/employHome.html
@@ -60,7 +60,7 @@
                         <button class="user-btn" onclick="toggleDropdown()">
                             <div class="user-avatar">JD</div>
                             <span>Jean Dupont</span>
-                            <i class="fas fa-chevron-up"></i>
+                            <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="dropdown-menu" id="userDropdown">
                             
