premier push TAMBUA 0.5 correction filter by JS

--- a/employHome.html
+++ b/employHome.html
@@ -58,8 +58,8 @@
                     
                     <div class="user-dropdown">
                         <button class="user-btn" onclick="toggleDropdown()">
-                            <div class="user-avatar">JD</div>
-                            <span>Jean Dupont</span>
+                            <div class="user-avatar">KK</div>
+                            <span>KONAN Kassi</span>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="dropdown-menu" id="userDropdown">
@@ -87,7 +87,7 @@
                         <div class="expenses-preview-header">
                             <div class="preview-title">
                                 <h2>Tableau de bord</h2>
-                                <p>Bienvenue Jean Dupont, voici un aperçu de vos informations</p>
+                                <p>Bienvenue KONAN Kassi, voici un aperçu de vos informations</p>
                             </div>
                             <button class="add-expense-btn" onclick="goToLeavesSection()">
                                 <i class="fas fa-calendar-plus"></i>
@@ -226,7 +226,7 @@
                 <!-- Header -->
                 <header class="header">
                     <div class="header-titles">
-                        <h2>Bonjour Jean Dupont 👋🏽</h2>
+                        <h2>Bonjour KONAN Kassi 👋🏽</h2>
                         <h5>Nous sommes le Jeudi 12 juin 2025</h5>
                     </div>
 
@@ -264,11 +264,11 @@
                                             <h3>Informations Générales</h3>
                                         </div>
                                         <div class="profile-avatar-section">
-                                            <div class="profile-avatar-large">JD</div>
+                                            <div class="profile-avatar-large">KK</div>
                                             <div class="profile-basic-info">
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">Nom Complet</div>
-                                                    <div class="expense-info-value">Jean Dupont</div>
+                                                    <div class="expense-info-value">KONAN Kassi</div>
                                                 </div>
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">Poste</div>
@@ -284,7 +284,7 @@
                                                 </div>
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">Email</div>
-                                                    <div class="expense-info-value">jean.dupont@tambua.com</div>
+                                                    <div class="expense-info-value">konan.kassi@tambua.com</div>
                                                 </div>
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">ID Employé</div>
@@ -302,7 +302,7 @@
                                         <div class="bank-details-grid">
                                             <div class="expensex-infox-itemx">
                                                 <div class="expense-info-label">Nom du titulaire du compte</div>
-                                                <div class="expense-info-value">Jean Dupont</div>
+                                                <div class="expense-info-value">KONAN Kassi</div>
                                             </div>
                                             <div class="expensex-infox-itemx">
                                                 <div class="expense-info-label">Numéro de compte</div>
@@ -339,13 +339,13 @@
                                         <form class="profile-form">
                                             <div class="expense-info-item">
                                                 <div class="expense-info-label">Nom Complet</div>
-                                                <input type="text" class="profile-form-control" value="Jean Dupont">
+                                                <input type="text" class="profile-form-control" value="KONAN Kassi">
                                             </div>
                                             
                                             <div class="profile-form-grid">
                                                 <div class="expense-info-item">
                                                     <div class="expense-info-label">Téléphone</div>
-                                                    <input type="tel" class="profile-form-control" value="+33 6 12 34 56 78">
+                                                    <input type="tel" class="profile-form-control" value="+225 07 87 09 36 07">
                                                 </div>
                                                 <div class="expense-info-item">
                                                     <div class="expense-info-label">Date de Naissance</div>
