--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-titles">
-            <h2>Bonjour Jean Dupont 👋🏽</h2>
+            <h2>Bonjour KONAN Kassi 👋🏽</h2>
             <h5>Nous sommes le Jeudi 12 juin 2025</h5>
         </div>
 
@@ -79,7 +79,7 @@
         <div class="expenses-preview">
             <div class="expenses-preview-header">
                 <div class="preview-title">
-                    <h2 id="profilePreviewTitle">Profil de Jean Dupont</h2>
+                    <h2 id="profilePreviewTitle">Profil de KONAN Kassi</h2>
                     <p id="profilePreviewSubtitle">Développeur Frontend - Département IT</p>
                 </div>
                 <button class="add-expense-btn" onclick="editProfile()">
@@ -105,7 +105,7 @@
                         <div class="profile-avatar-section">
                             <div class="profile-avatar-large">JD</div>
                             <div class="profile-main-info">
-                                <h2>Jean Dupont</h2>
+                                <h2>KONAN Kassi</h2>
                                 <p><strong>Poste:</strong> Développeur Frontend</p>
                                 <p><strong>Département:</strong> IT</p>
                                 <p><strong>Date d'embauche:</strong> 15 Mars 2023</p>
@@ -116,7 +116,7 @@
                         <div class="expense-info-grid">
                             <div class="expense-info-item">
                                 <div class="expense-info-label">Nom Complet</div>
-                                <div class="expense-info-value">Jean Dupont</div>
+                                <div class="expense-info-value">KONAN Kassi</div>
                             </div>
                             <div class="expense-info-item">
                                 <div class="expense-info-label">Email</div>
@@ -159,7 +159,7 @@
                         <div class="expense-info-grid">
                             <div class="expense-info-item">
                                 <div class="expense-info-label">Nom du titulaire</div>
-                                <div class="expense-info-value">Jean Dupont</div>
+                                <div class="expense-info-value">KONAN Kassi</div>
                             </div>
                             <div class="expense-info-item">
                                 <div class="expense-info-label">Numéro de compte</div>
