--- a/adminHome.html
+++ b/adminHome.html
@@ -92,9 +92,10 @@
             </ul>
 
             <div class="header-actions">
-                <div class="user-dropdown">
+                <div class="userx-dropdownx">
                     <button class="user-btn" onclick="toggleDropdown()">
-                        <div class="user-avatar">LK</div>
+                        <!-- <div class="user-avatar">LK</div> -->
+                         <div class="user-avatar" style="background-image: url('images/admin2.jpg'); background-size: cover; background-position: center; color: transparent;">LK</div>
                         <span>Lanciné Koulibaly</span>
                         <i class="fas fa-chevron-down"></i>
                     </button>
@@ -115,7 +116,7 @@
                 <!-- Header -->
                 <header class="header">
                     <div class="header-titles">
-                        <h2>Bonjour Lanciné Koulibaly 👋🏽</h2>
+                        <h2>Bonjour Lanciné Koulibaly</h2>
                         <h5>Nous sommes le Mardi 17 juin 2025</h5>
                     </div>
 
@@ -153,7 +154,8 @@
                                             <h3>Informations Générales</h3>
                                         </div>
                                         <div class="profile-avatar-section">
-                                            <div class="profile-avatar-large">LK</div>
+                                            <!-- <div class="profile-avatar-large">LK</div> -->
+                                             <div class="profile-avatar-large" style="background-image: url('images/admin2.jpg'); background-size: cover; background-position: center; color: transparent;">LK</div>
                                             <div class="profile-basic-info">
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">Nom Complet</div>
@@ -233,7 +235,7 @@
                                             
                                             <div class="profile-form-grid">
                                                 <div class="expense-info-item">
-                                                    <div class="expense-info-label">Téléphone</div>
+                                                    <div class="">Téléphone</div>
                                                     <input type="tel" class="profile-form-control" value="+225 07 12 34 56 78">
                                                 </div>
                                                 <div class="expense-info-item">
