--- a/adminHome.html
+++ b/adminHome.html
@@ -117,9 +117,8 @@
                 <header class="header">
                     <div class="header-titles">
                         <h2>Bonjour Lanciné Koulibaly</h2>
-                        <h5>Nous sommes le Mardi 17 juin 2025</h5>
+                        <h5 id="currentDateTime">Nous sommes le </h5>
                     </div>
-
                     <div style="display: flex; align-items: center; gap: 15px;">
                         <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                             <i class="fas fa-bars"></i>
@@ -1702,6 +1701,30 @@
         } else {
             showPage('dashboard'); // Dashboard par défaut au lieu de profile
         }
+
+        // Fonction pour mettre à jour la date et l'heure
+function updateDateTime() {
+    const now = new Date();
+    
+    const options = {
+        weekday: 'long',
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit'
+    };
+    
+    const dateTimeString = now.toLocaleDateString('fr-FR', options);
+    document.getElementById('currentDateTime').textContent = `Nous sommes le ${dateTimeString}`;
+}
+
+// Appeler la fonction au chargement de la page
+document.addEventListener('DOMContentLoaded', function() {
+    updateDateTime();
+    // Mettre à jour toutes les minutes
+    setInterval(updateDateTime, 60000);
+});
     </script>
 </body>
 </html>
