--- a/employHome.html
+++ b/employHome.html
@@ -58,7 +58,7 @@
                     
                     <div class="user-dropdown">
                         <button class="user-btn" onclick="toggleDropdown()">
-                            <div class="user-avatar">KK</div>
+                            <div class="user-avatar" style="background-image: url('images/employ2.jpg'); background-size: cover; background-position: center; color: transparent;">KK</div>
                             <span>KONAN Kassi</span>
                             <i class="fas fa-chevron-down"></i>
                         </button>
@@ -263,7 +263,7 @@
                                             <h3>Informations Générales</h3>
                                         </div>
                                         <div class="profile-avatar-section">
-                                            <div class="profile-avatar-large">KK</div>
+                                            <div class="profile-avatar-large" style="background-image: url('images/employ2.jpg'); background-size: cover; background-position: center; color: transparent;">KK</div>
                                             <div class="profile-basic-info">
                                                 <div class="expensex-infox-itemx">
                                                     <div class="expense-info-label">Nom Complet</div>
