--- a/adminHome.html
+++ b/adminHome.html
@@ -644,7 +644,7 @@
                         </div>
 
                         <div class="report-section">
-                            <h4>📊 Statistiques Générales</h4>
+                            <h4>Statistiques Générales</h4>
                             <div class="report-stats">
                                 <div class="report-stat-item">
                                     <span class="report-stat-label">Total Collaborateurs :</span>
@@ -652,7 +652,7 @@
                                 </div>
                                 <div class="report-stat-item">
                                     <span class="report-stat-label">Masse Salariale :</span>
-                                    <span class="report-stat-value">2,800,000 €</span>
+                                    <span class="report-stat-value">1,400,000,000 FCFA</span>
                                 </div>
                                 <div class="report-stat-item">
                                     <span class="report-stat-label">Congés en attente :</span>
@@ -666,7 +666,7 @@
                         </div>
 
                         <div class="report-section">
-                            <h4>👥 Répartition par Département</h4>
+                            <h4>Répartition par Département</h4>
                             <div class="report-stats">
                                 <div class="report-stat-item">
                                     <span class="report-stat-label">IT :</span>
@@ -688,7 +688,7 @@
                         </div>
 
                         <div class="report-section">
-                            <h4>📈 Nouveaux Recrutements</h4>
+                            <h4>Nouveaux Recrutements</h4>
                             <div class="report-recruits">
                                 <p>• Amadou Traoré - Développeur Backend (15/06/2025)</p>
                                 <p>• Aïcha Kone - Designer UX/UI (10/06/2025)</p>
