--- a/employHome.html
+++ b/employHome.html
@@ -114,7 +114,7 @@
                                     <div class="dashboard-stat-card">
                                         <div class="expense-info-item">
                                             <div class="expense-info-label">Mes bulletins</div>
-                                            <div class="expense-info-value">Votre rémunération nette s'est élevée à 3,200€ en Mai</div>
+                                            <div class="expense-info-value">Votre rémunération nette s'est élevée à 2,080,000FCFA en Mai</div>
                                             <button class="dashboard-link-btn" onclick="goToPayrollSection()">
                                                 <i class="fas fa-arrow-right"></i>
                                                 Voir le bulletin de paie
