--- a/adminHome.html
+++ b/adminHome.html
@@ -502,10 +502,10 @@
                                     <div class="expense-info-item">
                                         <div class="leave-item-header">
                                             <div class="expense-info-label">
-                                                <i class="fas fa-file-signature" style="margin-right: 8px; color: #059669;"></i>
+                                                <i class="fas fa-file-signature" style="margin-right: 8px; color: #3f1b68;"></i>
                                                 Demandes de paie
                                             </div>
-                                            <span class="status-badge" style="background: #059669; color: white;">3</span>
+                                            <span class="status-badge" style="background: #3f1b68; color: white;">3</span>
                                         </div>
                                         <div class="expense-info-value">Traiter les demandes spéciales</div>
                                     </div>
