--- a/adminHome.html
+++ b/adminHome.html
@@ -1137,7 +1137,7 @@
                             <i class="fas fa-trash"></i>
                             Supprimer
                         </button>
-                        <button type="button" class="btn btn-success" id="saveBtn" onclick="saveEmployeeChanges()" style="display: none; background: #059669;">
+                        <button type="button" class="btn btn-success" id="saveBtn" onclick="saveEmployeeChanges()" style="display: none; background: #6ea8ff;">
                             <i class="fas fa-save"></i>
                             Sauvegarder
                         </button>
